Updated styles and added in documents

--- a/index.html
+++ b/index.html
@@ -80,8 +80,44 @@
                </div>
           </div>
      </div>
+     <hr>
      <!-- END Header -->
 
+     <!-- Welcome -->
+     <div class="container">
+          <div class="row">
+               <div class="col-md-12">
+                    <h1>Welcome</h1>
+
+                    <p>Virginia’s National Core Indicators Project gathers information from people with disabilities, their families, and providers. Welcome to our website that tells you more about this project and what we have learned about supports and services in Virginia. This initiative is one way that Virginia is examining quality and provides a means to track progress and changes in systems of support for people with intellectual and developmental disabilities.</p>
+               </div>
+          </div>
+     </div>
+     <hr>
+     <!-- END Welcome -->
+
+     <!-- About the Project -->
+     <div class="container">
+          <div class="row">
+               <div class="col-md-12">
+                    <h1>About the Project</h1>
+
+                    <p>National Core Indicators (NCI) is a voluntary effort by public intellectual and developmental disabilities agencies to measure and track their state’s performance. Virginia is participating in this national program and this website provides information about NCI in Virginia.</p>
+
+                    <p>The <a href="http://www.nationalcoreindicators.org/indicators/" target="_blank"><strong>core indicators</strong></a> are standard measures used across states to assess the outcomes of supports and services provided to individuals and families. Indicators address key areas of concern including employment, rights, service planning, community inclusion, choice, and health and safety. Information is gathered in face-to-face interviews with people using services, through a mail survey to family members and guardians, and through an on-line survey for providers. Additional information about the national project can be found at: <a href="http://www.nationalcoreindicators.org" target="_blank"><strong>www.nationalcoreindicators.org</strong></a>.</p>
+
+                    <hr>
+
+                    <p>Virginia provides information to families and providers that help explain the project and the survey process.</p>
+
+                    <p><a href="docs/nciBrochure.pdf" target="_blank"><strong>NCI Brochure</strong></a> is mailed to people with disabilities and their families when they are selected to participate in the face-to-face interview. It includes information about what will happen during the interview.</p>
+
+                    <p><a href="docs/2015ProviderInfo.docx" target="_blank"><strong>Information for Providers </strong></a>explains why it is essential for all providers to understand the importance of participating in NCI and to encourage and assist with participation.</p>
+               </div>
+          </div>
+     </div>
+     <hr>
+     <!-- END About the Project -->
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
