--- a/index.html
+++ b/index.html
@@ -119,6 +119,74 @@
      <hr>
      <!-- END About the Project -->
 
+     <!-- Reports -->
+     <div class="container">
+          <div class="row">
+               <div class="col-md-12">
+                    <h1>National Core Indicators Summary Reports for Virginia</h1>
+
+                    <p>The Partnership for People with Disabilities developed reports to explain the information that was collected through the surveys. The reports use a graphic font to tell the collective results of the survey.</p>
+
+                    <p>The adult Consumer Survey is a two-part survey that collects information from adults with intellectual and developmental disabilities through a face-to-face interview. Questions concern the presence of valued outcomes in their lives. Demographic, service, and health information is also collected. The findings from this survey are included in the report <a href="docs/nci_2014_consumer_survey_summary_infographics_final.pdf" target="_blank"><strong>“2014 Adult Consumer Survey Summary Report”</strong>.</a></p>
+
+                    <p>Surveys are sent to families who have a family member with a disability and are intended to assess system responsiveness to their needs, quality of services, and their overall satisfaction.</p>
+
+                    <p>There are two types of family surveys for adults: a survey for families who have an adult family member with a disability who lives with them (Adult Family Survey Report) and a survey for families/guardians whose adult family member with a disability lives outside of the family home (Family Guardian Survey).</p>
+
+                    <br>
+
+                    <div class="row">
+                         <div class="col-md-4 report-summary text-center">
+                              <a href="docs/outcomes_people_who_moved_from_training_centers_102015.pdf" target="_blank"><strong>2015 Outcomes for People Who Have Moved From State Training Centers During 10/13/2011 and 7/1/2013</strong></a>
+                         </div>
+                         <div class="col-md-4 report-summary text-center">
+                              <a href="docs/virginia_national_comparison_03012016.pdf" target="_blank"><strong>2015 Comparison of Virginia Data with <br>National Data 2014 and 2015</strong></a>
+                         </div>
+                         <div class="col-md-4 text-center">
+                              <a href="docs/nci_2014_consumer_survey_summary_infographics_final.pdf" target="_blank"><strong>2014 Adult Consumer <br>Survey Summary Report</strong></a>
+                         </div>
+                    </div>
+
+               </div>
+          </div>
+     </div>
+     <hr>
+     <!-- END Reports -->
+
+     <!-- Resources -->
+     <div class="container">
+          <div class="row">
+               <div class="col-md-12">
+                    <h1>Resources and Other Information</h1>
+
+                    <p>There are other resources that explain more about the NCI national program and related programs in other states. A primary source of information is the National Core Indicators website that provides a wealth of information with interactive features for state comparisons.</p>
+
+                    <p>The national site also includes Virginia State Reports generated for Virginia (and other participating states) to show results of surveys conducted. Reports are designated by the year in which the information was collected.</p>
+
+                    <p>A site that provides information about values, beliefs, and practices that support people in living lives of their choosing is the Center for Person Centered Practices. Its purpose is to promote the use of person centered practices among people with disabilities and older adults, their families, and supporters in order to create positive change in their own lives, communities, and organizations.</p>
+
+                    <p>
+                         <ul class="list-inline text-center">
+                              <li>National Core Indicators <br>
+                                   <a href="http://www.nationalcoreindicators.org/" target="_blank"><strong>nationalcoreindicators.org</strong></a>
+                              </li>
+                              <li>
+                                   Virginia State Reports <br>
+                                   <a href="http://www.nationalcoreindicators.org/states/VA/" target="_blank"><strong>nationalcoreindicators.org/states/VA/</strong></a>
+                              </li>
+                              <li>
+                                   Person Centered Practices <br>
+                                   <a href="http://www.personcenteredpractices.org/" target="_blank"><strong>www.personcenteredpractices.org</strong></a>
+                              </li>
+                         </ul>
+                    </p>
+               </div>
+          </div>
+     </div>
+     <hr>
+     <!-- END Resources -->
+
+
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
