Added borders to Resources links

--- a/index.html
+++ b/index.html
@@ -167,12 +167,12 @@
 
                     <p>
                          <ul class="list-inline text-center">
-                              <li>National Core Indicators <br>
-                                   <a href="http://www.nationalcoreindicators.org/" target="_blank"><strong>nationalcoreindicators.org</strong></a>
+                              <li class="resources-info">National Core Indicators <br>
+                                   <a href="http://www.nationalcoreindicators.org/" target="_blank" class="padding-right"><strong>nationalcoreindicators.org</strong></a>
                               </li>
-                              <li>
+                              <li class="resources-info">
                                    Virginia State Reports <br>
-                                   <a href="http://www.nationalcoreindicators.org/states/VA/" target="_blank"><strong>nationalcoreindicators.org/states/VA/</strong></a>
+                                   <a href="http://www.nationalcoreindicators.org/states/VA/" target="_blank" class="padding-right"><strong>nationalcoreindicators.org/states/VA</strong></a>
                               </li>
                               <li>
                                    Person Centered Practices <br>
