--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 	<script src="//www.pubapps.vcu.edu/identity/widgets/branding/black/responsive/js/vcubranding-black-1.0.js"
 	type="text/javascript"></script>
 
+	<noscript>
+        <p class="text-center">Your browser does not have JavaScript enabled. Please enable JavaScript and refresh the page so you can view our content correctly.</p>
+    </noscript>
+
 	<!-- Favicon -->
 	<link href="img/favicon.ico" rel="icon">
 
@@ -34,12 +38,12 @@
     <![endif]-->
 </head>
 
-<body>
+<body id="top">
 	<!-- Navigation -->
 	<nav class="navbar navbar-default" id="navigation">
 
 		<!-- Nav Container -->
-		<div class="container-fluid" id="top">
+		<div class="container-fluid">
 
 			<!-- Site name and mobile button -->
 			<div class="navbar-header">
@@ -423,6 +427,9 @@
 					<script type="text/javascript">
 					     document.write(document.lastModified.substring(0, document.lastModified.indexOf(' ')));
 					</script>
+					<noscript>
+				        Updated 2016 
+				    </noscript>
 				</address>
 			</div>
 
@@ -438,13 +445,20 @@
 	<!-- Bootstrap core JavaScript
     ================================================== -->
 	<!-- Placed at the end of the document so the pages load faster -->
-	<script src=
-	"https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js">
 	</script> 
-	<script src="js/bootstrap.min.js">
-	</script> <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-	 
-	<script src="js/ie10-viewport-bug-workaround.js">
-	</script>
+	<noscript>
+        <p class="text-center">Your browser does not have JavaScript enabled. Please enable JavaScript and refresh the page so you can view our content correctly.</p>
+    </noscript>
+	<script src="js/bootstrap.min.js"></script> 
+	<noscript>
+        <p class="text-center">Your browser does not have JavaScript enabled. Please enable JavaScript and refresh the page so you can view our content correctly.</p>
+    </noscript>
+
+	<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+	<script src="js/ie10-viewport-bug-workaround.js"></script>
+	<noscript>
+        <p class="text-center">Your browser does not have JavaScript enabled. Please enable JavaScript and refresh the page so you can view our content correctly.</p>
+    </noscript>
 </body>
 </html>
