--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
 	<hr>
 	<!-- END About the Project -->
 	
+	<iframe src="https://docs.google.com/spreadsheets/d/1xJGoAClkdm57ak5CSDA23Jx_XvfWl-VkMb4Z9PyGrtw/pubhtml?widget=true&amp;headers=false"></iframe>
 	
 	<!-- Reports -->
 	<div class="container" id="reports">
@@ -208,16 +209,13 @@
 
 				<p>The Partnership for People with Disabilities developed reports to
 				explain the information that was collected through the surveys. The reports
-				use a graphic font to tell the collective results of the survey.</p>
+				use a graphic format to tell the collective results of the surveys.</p>
 
-				<p>The adult Consumer Survey is a two-part survey that collects information
+				<p>The Adult Consumer Survey is a two-part survey that collects information
 				from adults with intellectual and developmental disabilities through a
 				face-to-face interview. Questions concern the presence of valued outcomes
 				in their lives. Demographic, service, and health information is also
-				collected. The findings from this survey are included in the report
-				<a href="docs/nci_2014_consumer_survey_summary_infographics_final.pdf"
-				target="_blank"><strong>“2014 Adult Consumer Survey Summary
-				Report”</strong>.</a></p>
+				collected.</p>
 
 				<p>Surveys are sent to families who have a family member with a disability
 				and are intended to assess system responsiveness to their needs, quality of
@@ -232,6 +230,7 @@
 
                  
                 <div class="row">	
+                     <p>Results from the surveys are summarized in reports: </p>
 					<!-- Report Panes -->
 					<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 
@@ -292,76 +291,54 @@
 	
 <!-- Resources -->
 <div class="container" id="resources">
-<div class="row">
-<div class="col-md-12">
-<h2 id="resourcesHeader">Resources and Other Information</h2>
+     <div class="row">
+          <div class="col-md-12">
+               <h2 id="resourcesHeader">Resources and Other Information</h2>
 
 
-<p>There are other resources that explain more about the NCI national
-program and related programs in other states. A primary source of
-information is the National Core Indicators website that provides a wealth
-of information with interactive features for state comparisons.</p>
+               <p>There are other resources that explain more about the NCI national
+               program and related programs in other states. A primary source of
+               information is the National Core Indicators website that provides a wealth
+               of information with interactive features for state comparisons.</p>
 
 
-<p>The national site also includes Virginia State Reports generated for
-Virginia (and other participating states) to show results of surveys
-conducted. Reports are designated by the year in which the information was
-collected.</p>
+               <p>The national site also includes Virginia State Reports generated for
+               Virginia (and other participating states) to show results of surveys
+               conducted. Reports are designated by the year in which the information was
+               collected.</p>
 
+               <div class="row">
+                    <div class="col-md-6 text-center">
+                         <div class="panel panel-success">
+                              <div class="panel-heading resource-panel-heading">
+                                  <a href="http://www.nationalcoreindicators.org/"
+                              target="_blank">
+                                  <h3 class="panel-title">Resource</h3>
+                              </div>
+                              <div class="panel-body">
+                                 National Core Indicators<br>
+                              nationalcoreindicators.org</a> 
+                              </div>
+                         </div> 
+                    </div>
 
-<p>A site that provides information about values, beliefs, and practices
-that support people in living lives of their choosing is the Center for
-Person Centered Practices. Its purpose is to promote the use of person
-centered practices among people with disabilities and older adults, their
-families, and supporters in order to create positive change in their own
-lives, communities, and organizations.</p>
+               <div class="col-md-6 text-center">
+                    <div class="panel panel-success">
+                         <div class="panel-heading resource-panel-heading">
+                              <a href="http://www.nationalcoreindicators.org/states/VA/" target="_blank">
+                              <h3 class="panel-title">Resource</h3>
+                         </div>
+                         <div class="panel-body">
+                              Virginia State Reports<br>
+                              nationalcoreindicators.org/states/VA</a> 
+                         </div>
+                    </div> 
+               </div>
+          </div>  
 
-
-<div class="row">
-<div class="col-md-4 text-center">
-<div class="panel panel-success">
-<div class="panel-heading resource-panel-heading">
-    <a href="http://www.nationalcoreindicators.org/"
-target="_blank">
-    <h3 class="panel-title">Resource</h3>
-</div>
-<div class="panel-body">
-   National Core Indicators<br>
-nationalcoreindicators.org</a> 
-</div>
-</div> 
-</div>
-
-<div class="col-md-4 text-center">
-<div class="panel panel-success">
-<div class="panel-heading resource-panel-heading">
-<a href="http://www.nationalcoreindicators.org/states/VA/" target="_blank">
-<h3 class="panel-title">Resource</h3>
-</div>
-<div class="panel-body">
-Virginia State Reports<br>
-nationalcoreindicators.org/states/VA</a> 
-</div>
-</div> 
-</div>
-
-<div class="col-md-4 text-center">
-<div class="panel panel-success">
-<div class="panel-heading resource-panel-heading">
-    <a href="http://www.personcenteredpractices.org/" target="_blank">
-    <h3 class="panel-title">Resource</h3>
-</div>
-<div class="panel-body">
-    Person Centered Practices<br>
-    www.personcenteredpractices.org</a> 
-</div>
-</div> 
-</div>
-</div>  
-
-<p class="return"><a href="#top"><strong>Return to top</strong></a></p>
-</div>
-</div>
+          <p class="return"><a href="#top"><strong>Return to top</strong></a></p>
+          </div>
+     </div>
 </div>
 
 	<hr>
