Corrected links to documents
Corrected the errors for the document links

--- a/index.html
+++ b/index.html
@@ -178,14 +178,14 @@
 				explain the project and the survey process.</p>
 
 
-				<p><a href="docs/NCI brochure_10.14.16.pdf" target="_blank"><strong>NCI
+				<p><a href="docs/NCIbrochure_2016-2017_FINAL_10.26.16.pdf" target="_blank"><strong>NCI
 				Brochure</strong></a> is mailed to people with disabilities and their
 				families when they are selected to participate in the face-to-face
 				interview. It includes information about what will happen during the
 				interview.</p>
 
 
-				<p><a href="docs/NCI Information Sheet_10.14.16.pdf" target="_blank"><strong>Information
+				<p><a href="docs/NCIInformation%20sheet_10.26.16.pdf" target="_blank"><strong>Information
 				for Providers</strong></a> explains why it is essential for all providers
 				to understand the importance of participating in NCI and to encourage and
 				assist with participation.</p>
